[tool.poetry]
name = "typing-sandbox"
version = "0.1.0"
description = ""
authors = ["Kyle Adams <kadams54@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "typing_sandbox"}]

[tool.poetry.dependencies]
python = "^3.9"
pyright = "^1.1.332"
mypy = "^1.6.1"
pydantic = "^2.4.2"
rich = "^13.6.0"
ptpython = "^3.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
